--- a/index.html
+++ b/index.html
@@ -49,8 +49,49 @@
     <!-- Banner section end -->
     <main>
         <!-- featured product start -->
-        <section>
-
+        <section class="container mx-auto">
+            <div>
+                <h3 class="text-3xl lg:text-5xl text-center font-extrabold uppercase mb-5">Our Featured Products</span></h3>
+                <p class="text-sm lg:text-base font-medium text-center text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-3 mt-8 lg:mt-12">
+                    <div class="card  linear-gradient">
+                        <figure class="px-7 pt-7">
+                          <img src="./assets/images/tea-1.png" alt="client"/>
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title font-extrabold text-2xl">Milk Tea</h2>
+                          <p class="text-base font-semibold">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <div class="card  linear-gradient">
+                        <figure class="px-7 pt-7">
+                          <img src="./assets/images/tea-1.png" alt="client"/>
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title font-extrabold text-2xl">Milk Tea</h2>
+                          <p class="text-base font-semibold">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <div class="card  linear-gradient">
+                        <figure class="px-7 pt-7">
+                          <img src="./assets/images/tea-1.png" alt="client"/>
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title font-extrabold text-2xl">Milk Tea</h2>
+                          <p class="text-base font-semibold">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                    <div class="card  linear-gradient">
+                        <figure class="px-7 pt-7">
+                          <img src="./assets/images/tea-1.png" alt="client"/>
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title font-extrabold text-2xl">Milk Tea</h2>
+                          <p class="text-base font-semibold">Creamer could be replaced by fresh milk</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- featured product end -->
     </main>
