great tea section complete with responsive

--- a/index.html
+++ b/index.html
@@ -94,6 +94,39 @@
             </div>
         </section>
         <!-- featured product end -->
+
+        <!-- Fresh tea start -->
+        <section class="container mx-auto my-14 lg:my-32">
+            <div class="flex flex-col lg:flex-row justify-center gap-8 lg:gap-12">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 flex-1">
+                    <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100">
+
+                    </div>
+                    <div class="rounded-xl row-span-2 bg-[#E6A6231A] px-8 py-10 flex justify-center items-center">
+                        <img src="./assets/images/fresh-1.png" alt="grid">
+                    </div>
+                    <div class="rounded-xl row-span-2 bg-[#5776391A] px-8 py-10 flex justify-center items-center">
+                        <img src="./assets/images/fresh-2.png" alt="grid">
+                    </div>
+                    <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF]">
+
+                    </div>
+                </div>
+                <div class="flex-1">
+                    <h2 class="text-3xl lg:text-5xl font-extrabold mb-5 lg:mb-10 text-[#1C1C1C]">Great Tea, Freshly <br> Presented</h2>
+                    <p class="text-sm lg:text-base font-medium text-[#777]">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <div class="mt-5 lg:mt-10">
+                        <h5 class="text-xl font-extrabold mb-4">Unique Taste</h5>
+                        <p class="text-base font-medium">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    </div>
+                    <div class="mt-5 lg:mt-10">
+                        <h5 class="text-xl font-extrabold mb-4">Premium Quality</h5>
+                        <p class="text-base font-medium">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Fresh tea end -->
     </main>
 
 
