--- a/index.html
+++ b/index.html
@@ -127,6 +127,52 @@
             </div>
         </section>
         <!-- Fresh tea end -->
+
+        <!-- Review section start -->
+        <section class="container mx-auto">
+
+        </section>
+        <!-- Review section end -->
+
+        <!-- news section start -->
+        <section class="container mx-auto my-14 lg:my-32 hidden">
+            <h3 class="text-3xl lg:text-5xl text-center font-extrabold uppercase mb-5">News & Events</span></h3>
+            <p class="text-sm lg:text-base font-medium text-center text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+            <div class="flex flex-col lg:flex-row justify-center items-center gap-10 px-3 mt-8 lg:mt-12">
+                <div class="card card-compact  bg-base-100 p-5  border border-gray-300">
+                    <figure><img class="" src="./assets/images/news-1.png" alt="image" /></figure>
+                    <div class="card-body">
+                    <span class="text-base text-[#777] font-medium">Feb 05, 2027</span>
+                    <h1 class="text-[#1C1C1C] font-extrabold text-xl">Collecting 8 points for discount</h1>
+                    <p class="text-base text-[#777] font-normal">There are many variations of passages of Lorem Ipsum available.
+                    </p>
+                      <a class="text-[#1C1C1C] text-base font-bold hover:text-blue-800" href="#">Learn More</a>
+                    </div>
+                </div>
+                <div class="card card-compact  bg-base-100 p-5  border border-gray-300">
+                    <figure><img class="" src="./assets/images/news-2.png" alt="image" /></figure>
+                    <div class="card-body">
+                    <span class="text-base text-[#777] font-medium">Feb 05, 2027</span>
+                    <h1 class="text-[#1C1C1C] font-extrabold text-xl">Collecting 8 points for discount</h1>
+                    <p class="text-base text-[#777] font-normal">There are many variations of passages of Lorem Ipsum available.
+                    </p>
+                      <a class="text-[#1C1C1C] text-base font-bold hover:text-blue-800" href="#">Learn More</a>
+                    </div>
+                </div>
+                <div class="card card-compact  bg-base-100 p-5  border border-gray-300">
+                    <figure><img class="" src="./assets/images/news-3.png" alt="image" /></figure>
+                    <div class="card-body">
+                    <span class="text-base text-[#777] font-medium">Feb 05, 2027</span>
+                    <h1 class="text-[#1C1C1C] font-extrabold text-xl">Collecting 8 points for discount</h1>
+                    <p class="text-base text-[#777] font-normal">There are many variations of passages of Lorem Ipsum available.
+                    </p>
+                      <a class="text-[#1C1C1C] text-base font-bold hover:text-blue-800" href="#">Learn More</a>
+                    </div>
+                </div>
+               
+            </div>
+        </section>
+        <!-- news section end -->
     </main>
 
 
