review section complete

--- a/index.html
+++ b/index.html
@@ -129,13 +129,50 @@
         <!-- Fresh tea end -->
 
         <!-- Review section start -->
-        <section class="container mx-auto">
-
+        <section class="container mx-auto bg-gradient-to-r from-[#FF8938] to-[#F00] px-8 lg:px-16 py-8 rounded-lg lg:py-24">
+            <div class="flex flex-col lg:flex-row justify-center items-center gap-12">
+                <div class="lg:pr-28">
+                    <h1 class="text-white text-4xl lg:text-5xl font-extrabold mb-5">Meet Our Super <br> Clients</h1>
+                    <p class="text-base font-medium text-white mb-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <div class=" bg-white hover:bg-gray-400 font-bold text-xl w-[139px] rounded-lg">
+                        <button class=" flex p-5 rounded-lg text-[#F00]">Show All</button>
+                    </div>
+                </div>
+               <div class="relative">
+                    <div class="relative opacity-40 p-10 z-0 rounded-lg mb-16 bg-white ">
+                        <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white" src="./assets/images/client.png" alt="client">
+                        <p class="text-base font-normal text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h5 class="text-base font-bold text-[#1C1C1C] mt-5">Ilham Yuda</h5>
+                        <span class="text-base font-medium text-[#5D5A6F]">Businessman</span>
+                        <div class="flex justify-end">
+                            <img src="./assets/images/circles.png" alt="circle">
+                        </div>
+                    </div>
+                    <div class="absolute p-10 top-40 lg:-left-32 z-10 lg:w-[430px] rounded-lg bg-white ">
+                        <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white" src="./assets/images/client.png" alt="client">
+                        <p class="text-base font-normal text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h5 class="text-base font-bold text-[#1C1C1C] mt-5">Ilham Yuda</h5>
+                        <span class="text-base font-medium text-[#5D5A6F]">Businessman</span>
+                        <div class="flex justify-end">
+                            <img src="./assets/images/circles.png" alt="circle">
+                        </div>
+                    </div>
+                    <div class="relative opacity-40 p-10 z-0 rounded-lg bg-white ">
+                        <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white" src="./assets/images/client.png" alt="client">
+                        <p class="text-base font-normal text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h5 class="text-base font-bold text-[#1C1C1C] mt-5">Ilham Yuda</h5>
+                        <span class="text-base font-medium text-[#5D5A6F]">Businessman</span>
+                        <div class="flex justify-end">
+                            <img src="./assets/images/circles.png" alt="circle">
+                        </div>
+                    </div>
+               </div>
+            </div>
         </section>
         <!-- Review section end -->
 
         <!-- news section start -->
-        <section class="container mx-auto my-14 lg:my-32 hidden">
+        <section class="container mx-auto my-14 lg:my-32">
             <h3 class="text-3xl lg:text-5xl text-center font-extrabold uppercase mb-5">News & Events</span></h3>
             <p class="text-sm lg:text-base font-medium text-center text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
             <div class="flex flex-col lg:flex-row justify-center items-center gap-10 px-3 mt-8 lg:mt-12">
@@ -174,7 +211,6 @@
         </section>
         <!-- news section end -->
     </main>
-
 
     <footer>
 
