--- a/index.html
+++ b/index.html
@@ -212,9 +212,55 @@
         <!-- news section end -->
     </main>
 
-    <footer>
-
+    <footer class="linear-gradient-2">
+        <div class="container mx-auto">
+            <div class="flex flex-col lg:flex-row justify-between pt-24">
+                <img class="w-16" src="./assets/images/cup.png" alt="image">
+                <div class="flex items-center gap-2">
+                    <p>Ready to get strated?</p>
+                    <div class=" text-white font-bold text-base">
+                        <button class="bg-black flex gap-4 p-2 rounded-lg bg-gradient-to-r from-[#FF8938] to-[#F00]">Get Started</button>
+                    </div>
+                </div>
+            </div>
+            <div class="footer  text-base-content mt-24">
+                <nav>
+                  <header class="footer-title">Quick Links</header> 
+                  <a class="link link-hover">Branding</a>
+                  <a class="link link-hover">Design</a>
+                  <a class="link link-hover">Marketing</a>
+                  <a class="link link-hover">Advertisement</a>
+                </nav> 
+                <nav>
+                  <header class="footer-title">Our Service</header> 
+                  <a class="link link-hover">About us</a>
+                  <a class="link link-hover">Contact</a>
+                  <a class="link link-hover">Jobs</a>
+                  <a class="link link-hover">Press kit</a>
+                </nav> 
+                <nav>
+                  <header class="footer-title">Help</header> 
+                  <a class="link link-hover">Terms of use</a>
+                  <a class="link link-hover">Privacy policy</a>
+                  <a class="link link-hover">Cookie policy</a>
+                </nav> 
+                <form>
+                  <header class="footer-title">Subscribe to our newsletter</header> 
+                  <fieldset class="form-control w-80">
+                    <label class="label">
+                      <span class="label-text">Enter your email address</span>
+                    </label> 
+                    <div class="join relative">
+                      <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-[#494949] outline-none" /> 
+                      <button class="btn btn-primary rounded-full"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                        <path d="M6.91406 3.92432L12.1315 9.14171L6.91406 14.3591" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg></button>
+                    </div>
+                  </fieldset>
+                </form>
+              </div>
+              <p class="py-12 text-center">&copy;2024 UIDesign.to - All rights reserved.</p>
+        </div>
     </footer>
-    <div style="margin-bottom: 500px;"></div>
 </body>
 </html>
